tests/ui/consts/static_mut_containing_mut_ref3.stderr
error[E0080]: modifying a static's initial value from another static's initializer
  --> $DIR/static_mut_containing_mut_ref3.rs:3:31
   |
LL | static mut BAR: () = unsafe { FOO.0 = 99; };
   |                               ^^^^^^^^^^ evaluation of `BAR` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
